# latex-dependency-scanner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: continuous-integration-workflow.yml  main.yml  publish-to-pypi.yml  zizmor.yml
src/latex_dependency_scanner/: __init__.py  _version.py  compile.py  scanner.py
tests/: conftest.py  test_regex.py  test_scan.py
tests/resources/: acronyms.glstex  bibliography.bib  symbols.bib
