[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "latex_dependency_scanner"
description = "Scan LaTeX documents for their dependencies."
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/latex-dependency-scanner"
Changelog = "https://github.com/pytask-dev/latex-dependency-scanner/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/latex-dependency-scanner"
Github = "https://github.com/pytask-dev/latex-dependency-scanner"
Tracker = "https://github.com/pytask-dev/latex-dependency-scanner/issues"

[project.optional-dependencies]
typing = [
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.rye]
managed = true

[tool.hatch.build.hooks.vcs]
version-file = "src/latex_dependency_scanner/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "COM812", # Comply with ruff-format
    "ISC001", # Comply with ruff-format
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
