[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "latex-dependency-scanner"
description = "Scan LaTeX documents for their dependencies."
readme.content-type = "text/markdown"
readme.file = "README.md"
license.text = "MIT"
authors = [ { name = "Tobias Raabe", email = "raabe@posteo.de" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
urls.Changelog = "https://github.com/pytask-dev/latex-dependency-scanner/blob/main/CHANGES.md"
urls.Documentation = "https://github.com/pytask-dev/latex-dependency-scanner"
urls.Github = "https://github.com/pytask-dev/latex-dependency-scanner"
urls.Homepage = "https://github.com/pytask-dev/latex-dependency-scanner"
urls.Tracker = "https://github.com/pytask-dev/latex-dependency-scanner/issues"

[dependency-groups]
test = [
  "pytest>=8.1.1",
  "pytest-cov>=5",
]
typing = [
  "ty>=0.0.8",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/latex_dependency_scanner/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.exclude = [ "tests" ]
build.targets.wheel.only-packages = true
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true
lint.select = [ "ALL" ]
lint.extend-ignore = [
  "COM812", # Comply with ruff-format
  "ISC001", # Comply with ruff-format
]
lint.per-file-ignores."tests/*" = [ "ANN", "D", "S101" ]
lint.isort.force-single-line = true
lint.pydocstyle.convention = "numpy"

[tool.pytest]
ini_options.testpaths = [ "src", "tests" ]
ini_options.norecursedirs = [ ".idea", ".tox" ]

[tool.ty]
overrides = [
  { include = [ "src/**/_version.py" ], rules = { invalid-type-form = "ignore" } },
  { include = [ "src/**/__init__.py" ], rules = { unused-ignore-comment = "ignore" } },
]
rules.unused-ignore-comment = "error"
terminal.error-on-warning = true
