[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "latex-dependency-scanner"
description = "Scan LaTeX documents for their dependencies."
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"
[project.license]
text = "MIT"
[project.readme]
content-type = "text/markdown"
file = "README.md"
[project.urls]
Changelog = "https://github.com/pytask-dev/latex-dependency-scanner/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/latex-dependency-scanner"
Github = "https://github.com/pytask-dev/latex-dependency-scanner"
Homepage = "https://github.com/pytask-dev/latex-dependency-scanner"
Tracker = "https://github.com/pytask-dev/latex-dependency-scanner/issues"

[dependency-groups]
test = [
  "pytest>=8.1.1",
  "pytest-cov>=5",
]
typing = [
  "ty>=0.0.8",
]

[tool.hatch]
[tool.hatch.build]
hooks.vcs.version-file = "src/latex_dependency_scanner/_version.py"
targets.sdist.exclude = [ "tests" ]
targets.sdist.only-packages = true
targets.wheel.exclude = [ "tests" ]
targets.wheel.only-packages = true
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812", # Comply with ruff-format
  "ISC001", # Comply with ruff-format
]
per-file-ignores."tests/*" = [ "ANN", "D", "S101" ]
isort.force-single-line = true
pydocstyle.convention = "numpy"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
[tool.pytest.ini_options]
testpaths = [ "src", "tests" ]
norecursedirs = [ ".idea", ".tox" ]

[tool.ty]
overrides = [
  { include = [ "src/**/_version.py" ], rules = { invalid-type-form = "ignore" } },
  { include = [ "src/**/__init__.py" ], rules = { unused-ignore-comment = "ignore" } },
]
[tool.ty.rules]
unused-ignore-comment = "error"
[tool.ty.terminal]
error-on-warning = true
