[metadata]
name = latex_dependency_scanner
description = Scan LaTeX documents for their dependencies.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytask-dev/latex-dependency-scanner
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/latex-dependency-scanner/blob/main/CHANGES.rst
    Documentation = https://github.com/pytask-dev/latex-dependency-scanner
    Github = https://github.com/pytask-dev/latex-dependency-scanner
    Tracker = https://github.com/pytask-dev/latex-dependency-scanner/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = =src
zip_safe = False

[options.packages.find]
where = src
